@@ -36,6 +36,7 @@
 - Fix: [#15496] Crash in paint_swinging_inverter_ship_structure().
 - Fix: [#15503] Freeze when doing specific coaster merges with block brakes.
 - Fix: [#15514] Two different “quit to menu” menu items are available in track designer and track design manager.
+- Fix: [#15560] Memory leak due to OpenGL Renderer not releasing a texture.
 - Improved: [#3417] Crash dumps are now placed in their own folder.
 - Improved: [#13524] macOS arm64 native (universal) app
 - Improved: [#15538] Software rendering can now draw in parallel when Multithreading is enabled.
